els-ASAP auto commit file/tag mipv6-daemon-2.0.2.20110203bgit-1.el6.src.rpm

--- a/src/autom4te.cache/traces.1
+++ b/src/autom4te.cache/traces.1
@@ -1,4 +1,4 @@
-m4trace:configure.ac:5: -1- AC_INIT([UMIP Mobile IPv6 for Linux], [1.0], [URL:http://umip.org/], [umip])
+m4trace:configure.ac:5: -1- AC_INIT([MIPL Mobile IPv6 for Linux], [2.0.2-umip-0.4], [URL:http://www.mobile-ipv6.org/bugs/], [mipv6])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([_AC_])
 m4trace:configure.ac:5: -1- m4_pattern_forbid([^LIBOBJS$], [do not use LIBOBJS directly, use AC_LIBOBJ (see section `AC_LIBOBJ vs LIBOBJS'])
@@ -152,7 +152,7 @@ m4trace:configure.ac:7: -1- AH_OUTPUT([PACKAGE_COPYRIGHT], [/* Define to the cop
 @%:@undef PACKAGE_COPYRIGHT])
 m4trace:configure.ac:12: -1- AM_INIT_AUTOMAKE
 m4trace:configure.ac:12: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:12: -1- AM_AUTOMAKE_VERSION([1.11.6])
+m4trace:configure.ac:12: -1- AM_AUTOMAKE_VERSION([1.11.1])
 m4trace:configure.ac:12: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:12: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -225,7 +225,7 @@ m4trace:configure.ac:12: -1- m4_pattern_allow([^SET_MAKE$])
 m4trace:configure.ac:12: -1- AC_SUBST([am__leading_dot])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([am__leading_dot])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^am__leading_dot$])
-m4trace:configure.ac:12: -1- AC_SUBST([AMTAR], ['$${TAR-tar}'])
+m4trace:configure.ac:12: -1- AC_SUBST([AMTAR])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([AMTAR])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^AMTAR$])
 m4trace:configure.ac:12: -1- AC_SUBST([am__tar])
@@ -235,7 +235,7 @@ m4trace:configure.ac:12: -1- AC_SUBST([am__untar])
 m4trace:configure.ac:12: -1- AC_SUBST_TRACE([am__untar])
 m4trace:configure.ac:12: -1- m4_pattern_allow([^am__untar$])
 m4trace:configure.ac:13: -1- _m4_warn([obsolete], [The macro `AM_CONFIG_HEADER' is obsolete.
-You should run autoupdate.], [aclocal.m4:429: AM_CONFIG_HEADER is expanded from...
+You should run autoupdate.], [aclocal.m4:419: AM_CONFIG_HEADER is expanded from...
 configure.ac:13: the top level])
 m4trace:configure.ac:13: -1- AC_CONFIG_HEADERS([config.h])
 m4trace:configure.ac:16: -1- AC_CANONICAL_HOST
@@ -327,10 +327,6 @@ m4trace:configure.ac:17: -1- AC_SUBST([AMDEPBACKSLASH])
 m4trace:configure.ac:17: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
 m4trace:configure.ac:17: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
 m4trace:configure.ac:17: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
-m4trace:configure.ac:17: -1- AC_SUBST([am__nodep])
-m4trace:configure.ac:17: -1- AC_SUBST_TRACE([am__nodep])
-m4trace:configure.ac:17: -1- m4_pattern_allow([^am__nodep$])
-m4trace:configure.ac:17: -1- _AM_SUBST_NOTMAKE([am__nodep])
 m4trace:configure.ac:17: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
 m4trace:configure.ac:17: -1- AC_SUBST_TRACE([CCDEPMODE])
 m4trace:configure.ac:17: -1- m4_pattern_allow([^CCDEPMODE$])
@@ -654,7 +650,7 @@ m4trace:configure.ac:71: -1- m4_pattern_allow([^HAVE_DOPRNT$])
 m4trace:configure.ac:71: -1- AH_OUTPUT([HAVE_DOPRNT], [/* Define to 1 if you don\'t have `vprintf\' but do have `_doprnt.\' */
 @%:@undef HAVE_DOPRNT])
 m4trace:configure.ac:72: -1- _m4_warn([obsolete], [AC_FUNC_WAIT3: `wait3' has been removed from POSIX.
-Remove this `AC_FUNC_WAIT3' and adjust your code to use `waitpid' instead.], [../../lib/autoconf/functions.m4:1979: AC_FUNC_WAIT3 is expanded from...
+Remove this `AC_FUNC_WAIT3' and adjust your code to use `waitpid' instead.], [../../lib/autoconf/functions.m4:1957: AC_FUNC_WAIT3 is expanded from...
 configure.ac:72: the top level])
 m4trace:configure.ac:72: -1- AC_DEFINE_TRACE_LITERAL([HAVE_WAIT3])
 m4trace:configure.ac:72: -1- m4_pattern_allow([^HAVE_WAIT3$])
@@ -735,79 +731,79 @@ m4trace:configure.ac:131: -1- AC_SUBST_TRACE([ENABLE_VT_FALSE])
 m4trace:configure.ac:131: -1- m4_pattern_allow([^ENABLE_VT_FALSE$])
 m4trace:configure.ac:131: -1- _AM_SUBST_NOTMAKE([ENABLE_VT_TRUE])
 m4trace:configure.ac:131: -1- _AM_SUBST_NOTMAKE([ENABLE_VT_FALSE])
+m4trace:configure.ac:135: -1- AC_LIBSOURCE([inet6_opt_find.c])
 m4trace:configure.ac:135: -1- AH_OUTPUT([HAVE_INET6_OPT_FIND], [/* Define to 1 if you have the `inet6_opt_find\' function. */
 @%:@undef HAVE_INET6_OPT_FIND])
 m4trace:configure.ac:135: -1- AC_DEFINE_TRACE_LITERAL([HAVE_INET6_OPT_FIND])
 m4trace:configure.ac:135: -1- m4_pattern_allow([^HAVE_INET6_OPT_FIND$])
-m4trace:configure.ac:135: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_opt_find.$ac_objext"])
+m4trace:configure.ac:135: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS $ac_func.$ac_objext"])
 m4trace:configure.ac:135: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:135: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:135: -1- AC_LIBSOURCE([inet6_opt_find.c])
 m4trace:configure.ac:141: -1- AC_DEFINE_TRACE_LITERAL([HAVE_DECL_IPV6_RTHDR_TYPE_2])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^HAVE_DECL_IPV6_RTHDR_TYPE_2$])
 m4trace:configure.ac:141: -1- AH_OUTPUT([HAVE_DECL_IPV6_RTHDR_TYPE_2], [/* Define to 1 if you have the declaration of `IPV6_RTHDR_TYPE_2\', and to 0 if
    you don\'t. */
 @%:@undef HAVE_DECL_IPV6_RTHDR_TYPE_2])
+m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_space.c])
 m4trace:configure.ac:141: -1- AH_OUTPUT([HAVE_INET6_RTH_SPACE], [/* Define to 1 if you have the `inet6_rth_space\' function. */
 @%:@undef HAVE_INET6_RTH_SPACE])
 m4trace:configure.ac:141: -1- AC_DEFINE_TRACE_LITERAL([HAVE_INET6_RTH_SPACE])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^HAVE_INET6_RTH_SPACE$])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_space.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS $ac_func.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_space.c])
+m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_init.c])
 m4trace:configure.ac:141: -1- AH_OUTPUT([HAVE_INET6_RTH_INIT], [/* Define to 1 if you have the `inet6_rth_init\' function. */
 @%:@undef HAVE_INET6_RTH_INIT])
 m4trace:configure.ac:141: -1- AC_DEFINE_TRACE_LITERAL([HAVE_INET6_RTH_INIT])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^HAVE_INET6_RTH_INIT$])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_init.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS $ac_func.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_init.c])
+m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_add.c])
 m4trace:configure.ac:141: -1- AH_OUTPUT([HAVE_INET6_RTH_ADD], [/* Define to 1 if you have the `inet6_rth_add\' function. */
 @%:@undef HAVE_INET6_RTH_ADD])
 m4trace:configure.ac:141: -1- AC_DEFINE_TRACE_LITERAL([HAVE_INET6_RTH_ADD])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^HAVE_INET6_RTH_ADD$])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_add.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS $ac_func.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_add.c])
+m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_getaddr.c])
 m4trace:configure.ac:141: -1- AH_OUTPUT([HAVE_INET6_RTH_GETADDR], [/* Define to 1 if you have the `inet6_rth_getaddr\' function. */
 @%:@undef HAVE_INET6_RTH_GETADDR])
 m4trace:configure.ac:141: -1- AC_DEFINE_TRACE_LITERAL([HAVE_INET6_RTH_GETADDR])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^HAVE_INET6_RTH_GETADDR$])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_getaddr.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS $ac_func.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_getaddr.c])
+m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_gettype.c])
 m4trace:configure.ac:141: -1- AH_OUTPUT([HAVE_INET6_RTH_GETTYPE], [/* Define to 1 if you have the `inet6_rth_gettype\' function. */
 @%:@undef HAVE_INET6_RTH_GETTYPE])
 m4trace:configure.ac:141: -1- AC_DEFINE_TRACE_LITERAL([HAVE_INET6_RTH_GETTYPE])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^HAVE_INET6_RTH_GETTYPE$])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_gettype.$ac_objext"])
-m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_gettype.c])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_space.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS $ac_func.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_space.c])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_init.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_space.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_init.c])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_add.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_init.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_add.c])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_getaddr.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_add.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_getaddr.c])
-m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_gettype.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_getaddr.$ac_objext"])
 m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
 m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:141: -1- AC_LIBSOURCE([inet6_rth_gettype.c])
+m4trace:configure.ac:141: -1- AC_SUBST([LIB@&t@OBJS], ["$LIB@&t@OBJS inet6_rth_gettype.$ac_objext"])
+m4trace:configure.ac:141: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:141: -1- m4_pattern_allow([^LIB@&t@OBJS$])
 m4trace:configure.ac:154: -1- AM_CONDITIONAL([MISSING], [test x$ac_cv_func_inet6_opt_find != xyes -o \
 	x$ac_cv_func_inet6_rth_space != xyes -o \
 	x$ac_cv_func_inet6_rth_init != xyes -o \
